# cookiecutter-repo-governance

./: .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CI-CD-WORKFLOWS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  REFERENCES.md  RELEASE-CHECKLIST.md  RELEASE-POLICY.md  SUPPORT.md  cookiecutter.json  pyproject.toml  pytest.ini
.github/: BRANCH-PROTECTION.md  CODEOWNERS  FUNDING.yml  MAINTAINER-RUNBOOKS.md  RELEASE-NOTES-TEMPLATE.md  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  pr.yml  sbom.yml
hooks/: post_gen_project.py
tests/: __init__.py  conftest.py  pytest_helpers.py
tests/integration/: conftest.py  test_i_cookiecutter_render.py
tests/meta/: conftest.py  test_m_marker_coverage.py  test_m_repository_docs.py  test_m_repository_headers.py  test_m_test_filenames.py
tests/unit/: conftest.py  test_u_post_gen_project.py
{{cookiecutter.project_slug}}/: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REFERENCES.md  RELEASE-CHECKLIST.md  SECURITY.md  SUPPORT.md
{{cookiecutter.project_slug}}/.azuredevops/: pull_request_template.md
{{cookiecutter.project_slug}}/.github/: BRANCH-PROTECTION.md  FUNDING.yml  MAINTAINER-RUNBOOKS.md  PULL_REQUEST_TEMPLATE.md  RELEASE-NOTES-TEMPLATE.md  pull_request_template.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
{{cookiecutter.project_slug}}/.gitlab/issue_templates/: Bug.md
{{cookiecutter.project_slug}}/.gitlab/merge_request_templates/: Default.md
